syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blank {}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryResponse {
    string name = 2;
    string description = 3;
}

message CategoryList{
    repeated Category categories = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryResponse) returns (Category) {}
    rpc ListCategories(blank) returns(CategoryList) {}
}